--- a/pages/intro.html
+++ b/pages/intro.html
@@ -10,21 +10,25 @@
 </head>
 <body>
     <h1>New Media Design I</h1>
-    <h2>[PROJECT_NAME]</h2>
+    <h2>Muziekgroep Buurman</h2>
 
     <dl class="info">
         <dt>Naam</dt>
-        <dd>[STUDENT_NAAM]</dd>
+        <dd>Iris De Smet</dd>
         <dt>Studentnummer</dt>
-        <dd>[STUDENT_NR]</dd>
+        <dd>93386</dd>
         <dt>Klasgroep</dt>
-        <dd>[KLASGROEP]</dd>
+        <dd>1MMP-Ba</dd>
     </dl>
     <p>
-        <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[STUDENT_NR]">Mijn opdracht</a>
+        <a href="http://deweirdt.be/nmd1/thanks.php?student_id=[93386]">Mijn opdracht</a>
     </p>
     
     <h1>Introductie</h1>
-    <p>[About my project]</p>
+    <p>Ik ga een website maken voor website van een muziekband. De doelgroep is kinderen van 12 tot 16 jaar. De kleurcode is hsla(61, 57%, 56%,1). Het lettertype is PT Sans. De kleurcode is een geelachtige met een kleur met een groene tint. 
+Ik heb hiervoor gekozen omdat dit concept het leukste leek. Je kunt hierbij creatief zijn en je moet het redelijk gemakkelijk maken. Het mag wat speels/kinderlijk zijn maar ook niet te veel. Want ik maak de site voor tieners/pubers. De tekst die ik op de site ga gebruiken moet gemakkelijk te begrijpen zijn voor mijn doelgroep.
+Ik ga een website maken voor de muziekgroep Buurman. Je gaat er informatie vinden over de voornaamste bandleden. Er zijn 3 bandleden die er al vanaf het begin bij zijn. Je gaat ook kunnen zien welke cd’s dat ze al gemaakt hebben en hun tournee. Er gaan ook foto’s op de site staan en een link naar hun Facebook en Twitter pagina. Je gaat ook kunnen zien hoe dat je contact gaat kunnen opnemen met Buurman. Ik ga ook iets maken waarmee je direct kaarten kunt kopen voor één van hun optredens. 
+Mijn website gaat niet zoals een gewone website van vroeger eruit zien. Hiermee bedoel ik dat de site niet allemaal verschillende tabbladen gaat hebben. Maar ook zo zaken onder elkaar. De jongeren gaan dan naar onder kunnen door scrollen. De website gaat ook heel gemakkelijk zijn en je gaat ook alles snel kunnen vinden. Op de site ga je duidelijk kunnen zien dat er kolommen en rijen gebruikt zijn.
+</p>
 </body>
 </html>
