--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -10,6 +10,49 @@
 </head>
 <body>
     <h1>Concurrentie analyse</h1>
+      <table class="table">
+        <tr>
+            <th></th>
+            <th class="positief">Positief</th>
+            <th class="negatief">Negatief</th>
+        </tr>
+        <tr>
+            <td class="buur" rowspan="5">Buurman</td>
+            <td class="rijen">Je kunt zaken bestellen </td>
+            <td class="rijen"> Te veel tabbladen </td>
+        </tr>
+        <tr>
+            <td class="rijen">Je kunt alles snel vinden </td>
+            <td class="rijen">Het menu is te lang </td>
+        </tr>
+        <tr>
+            <td class="Bart" rowspan="10">Bart Peeters</td>
+            <td class="rijen2">Compacte navigatie </td>
+            <td class="rijen2"> Je kunt niets zoeken op de site </td>
+        </tr>
+        <tr>
+            <td class="rijen2">Je kunt alles snel vinden door het menu </td>
+            <td class="rijen2">Je kunt niets opzoeken </td>
+        </tr>
+        <tr>
+            <td class="rijen2"></td>
+            <td class="rijen2">Je kunt geen cd's bestellen </td>
+        </tr>
+        <tr>
+            <td class="Yev" rowspan="2">Yevgueni</td>
+            <td class="rijen">Compacte navigatie </td>
+            <td class="rijen"> Je kunt niets bestellen </td>   
+        </tr>
+        <tr>
+            <td class="rijen">Duidelijke contactpagina</td>
+            <td class="rijen">Veel zaken in het menu </td>
+        </tr>
+        <tr>
+            <td class="rijen"></td>
+            <td class="rijen">Het lettertype past niet </td>
+        </tr>
+
+    </table>
     
 </body>
 </html>
