--- a/pages/scenarios.html
+++ b/pages/scenarios.html
@@ -10,5 +10,11 @@
 </head>
 <body>
     <h1>Scenario's</h1>
+      <p>
+        - Maaite is 12 jaar, ze zit in haar eerste jaar op de middelbare school. Ze gebruikt de site om informatie op te zoeken over de muziekgroep Buurman. Ze zoekt vaak informatie voor haar spreekbeurt.
+        - Tim is 13 jaar, zit in zijn tweede jaar op de middelbare school. Hij zit ook zelf in een muziekbandje. Zijn grote voorbeeld is Buurman. Hij volgt ze ook op de voet.
+        - Louis is 14 jaar, zit in haar derde middelbaar. Hij is eigenlijk toevallig op de site van Buurman terechtgekomen. Hij wilt dan eens kijken naar welke muziek dat ze maken en informatie over de band.
+        - Laura is 16 jaar, zit in haar vierde middelbaar. Ze wilt graag eens gaan naar een concert van Buurman.
+       </p>
 </body>
 </html>
