--- a/pages/concurrentie.html
+++ b/pages/concurrentie.html
@@ -32,7 +32,7 @@
         </tr>
         <tr>
             <td class="rijen2">Je kunt alles snel vinden door het menu </td>
-            <td class="rijen2">Je kunt niets opzoeken </td>
+            <td class="rijen2">Niet alles is duidelijk zoals "Foto's Hugo Van Beveren". Waarom staat er niet gewoon foto's</td>
         </tr>
         <tr>
             <td class="rijen2"></td>
